syntax = "proto3";

package suggestions;

service SuggestService {
    rpc FindSuggestions (SuggestRequest) returns (SuggestResponse);
}

message SuggestRequest {
    string name = 1;
}

message SuggestResponse {
    repeated string firstSuggestion = 1;
    repeated string secondSuggestion = 2;
}

import "google/protobuf/empty.proto";
message ClearDataRequest {
    repeated int32 vector_clock = 1;
}

service YourService {
    // Existing rpc methods
    rpc ClearData(ClearDataRequest) returns (google.protobuf.Empty) {}
}
